@@ -62,7 +62,9 @@ gtk2perl_tree_model_filter_modify_func (GtkTreeModel *model,
 MODULE = Gtk2::TreeModelFilter	PACKAGE = Gtk2::TreeModelFilter	PREFIX = gtk_tree_model_filter_
 
 BOOT:
-	gperl_set_isa ("Gtk2::TreeModelFilter", "Gtk2::TreeModel");
+	/* TreeModel needs to be first in @ISA so that Gtk2::TreeModel::get
+	 * is found before Glib::Object::get(). */
+	gperl_prepend_isa ("Gtk2::TreeModelFilter", "Gtk2::TreeModel");
 	gperl_set_isa ("Gtk2::TreeModel", "Gtk2::TreeDragSource");
 
  ## GtkTreeModel *gtk_tree_model_filter_new (GtkTreeModel *child_model, GtkTreePath *root);
